# michaeldello-cplusplus

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: main-cicd.yml
containerization/debian/: Dockerfile  devcontainer.json
containerization/linux/: Dockerfile  devcontainer.json
include/: adapterpattern.h  facadepattern.h  facadepattern_stubs.h  mainhelp.h  proxypattern.h
include/common/: st_enum_ops.h
src/: adapterpattern.cpp  facadepattern.cpp  main.cpp  mainhelp.cpp  proxypattern.cpp
tests/: test_adapterpattern.cpp  test_facadepattern.cpp  test_main.cpp  test_proxypattern.cpp
